<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
    >
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/iniciada"
            />
        <TextView android:id="@+id/corrida_iniciadaTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/latitude"
            />
        <TextView android:id="@+id/corrida_latitudeTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/longitude"
            />
        <TextView android:id="@+id/corrida_longitudeTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/altitude"
            />
        <TextView android:id="@+id/corrida_altitudeTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/tempo_decorrido"
            />
        <TextView android:id="@+id/corrida_duracaoTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="25sp"
            />
    </TableRow>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/corrida_iniciarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inicia"
            />
        <Button android:id="@+id/corrida_pararButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/para"
            />
        <Button
            android:id="@+id/corrida_mapaButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mapa"/>
    </LinearLayout>
</TableLayout>
